--- a/panel/src/app/message/addmessage/addmessage.component.html
+++ b/panel/src/app/message/addmessage/addmessage.component.html
@@ -4,22 +4,22 @@
         <mat-card>
             <mat-card-content>
                 <!-- Message Form -->
-                <mat-card-title>Add Message</mat-card-title>
+                <mat-card-title>{{MessageLabel}}</mat-card-title>
                 <form class="basic-form" (ngSubmit)="onSubmit()" name="AddMessageForm" #AddMessageForm="ngForm">
                 <div fxLayout="row" fxLayoutWrap="wrap">
                     <div fxFlex.gt-md="100" fxFlex="100">
                       <mat-form-field>
-                        <input matInput placeholder="Enter Name" [(ngModel)]="messagedata.name" id="name"  name="name">
+                        <input matInput type="text" placeholder="Enter Name" [(ngModel)]="messagedata.name" name="name">
                       </mat-form-field>
                     </div>
                     <div fxFlex.gt-sm="100" fxFlex="100">
                         <mat-form-field>
-                            <input matInput placeholder="Enter File Name" [(ngModel)]="messagedata.filename"  id="filename" name="filename">
+                            <input matInput type="text" placeholder="Enter File Name" [(ngModel)]="messagedata.filename" name="filename">
                         </mat-form-field>
                     </div>
                     <div fxFlex.gt-sm="100" fxFlex="100">
                       <mat-form-field>
-                        <input matInput placeholder="Enter File" [(ngModel)]="messagedata.file"  id="file" name="file">
+                        <input matInput placeholder="Enter File" [(ngModel)]="messagedata.file"  name="file" type="text">
                       </mat-form-field>
                     </div>
                     <div fxFlex.gt-sm="100" fxFlex="100">
