--- a/panel/src/app/message/listmessage/listmessage.component.html
+++ b/panel/src/app/message/listmessage/listmessage.component.html
@@ -28,7 +28,8 @@
                 <ng-container matColumnDef="actions">
                 <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
                 <mat-cell *matCellDef="let row">
-                    <button mat-raised-button color="primary" (click)="DeleteDetail(row)">Delete</button>
+                    <button mat-raised-button color="primary" (click)="Edit(row)">Edit</button>
+                    <button mat-raised-button color="primary" (click)="Delete(row)">Delete</button>
                 </mat-cell>
               </ng-container> 
 
