--- a/panel/src/app/message/addmessage/addmessage.component.html
+++ b/panel/src/app/message/addmessage/addmessage.component.html
@@ -5,7 +5,7 @@
             <mat-card-content>
                 <!-- Message Form -->
                 <mat-card-title>{{MessageLabel}}</mat-card-title>
-                <form class="basic-form" (ngSubmit)="onSubmit()" name="AddMessageForm" #AddMessageForm="ngForm">
+                <form class="basic-form" (ngSubmit)="onSubmit()"  #AddMessageForm="ngForm">
                 <div fxLayout="row" fxLayoutWrap="wrap">
                     <div fxFlex.gt-md="100" fxFlex="100">
                       <mat-form-field>
