--- a/panel/src/app/did/list-did/list-did.component.html
+++ b/panel/src/app/did/list-did/list-did.component.html
@@ -1,3 +1,43 @@
-<p>
-  list-did works!
-</p>
+
+
+<div fxLayout="row" fxLayoutWrap="wrap">
+  <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
+    <mat-card>
+      <mat-card-content> 
+        <div class="example-header">
+          <mat-form-field>
+            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+          </mat-form-field>
+        </div>
+        <div class="table-rasponsive">
+            <mat-table #table [dataSource]="dataSource" matSort>
+                
+                <ng-container matColumnDef="number">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Number </mat-header-cell>
+                  <mat-cell *matCellDef="let element"> {{element.number}} </mat-cell>
+                </ng-container>
+   
+                <ng-container matColumnDef="supplier">
+                  <mat-header-cell *matHeaderCellDef> Supplier </mat-header-cell>
+                  <mat-cell *matCellDef="let element"> {{element.supplier}} </mat-cell>
+                </ng-container>
+  
+              
+  
+                  <ng-container matColumnDef="actions">
+                  <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+                  <mat-cell *matCellDef="let row">
+                     
+                      <button mat-raised-button color="primary" (click)="DeleteDetail(row)">Delete</button>
+                  </mat-cell>
+                </ng-container> 
+  
+                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+          </mat-table>
+          <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
+        </div>    
+      </mat-card-content>
+    </mat-card>
+    </div>
+  </div>
