--- a/panel/src/app/supplier/addsupplier/addsupplier.component.html
+++ b/panel/src/app/supplier/addsupplier/addsupplier.component.html
@@ -4,21 +4,21 @@
             <mat-card>
                 <mat-card-content>
                     <mat-card-title>Add Supplier</mat-card-title>
-                    <form class="basic-form" (ngSubmit)="onSubmit()" name="AddSupplierForm" #AddMessageForm="ngForm">
+                    <form class="basic-form" (ngSubmit)="onSubmit()" #AddSupplierForm="ngForm">
                     <div fxLayout="row" fxLayoutWrap="wrap">
                         <div fxFlex.gt-md="100" fxFlex="100">
                           <mat-form-field>
-                            <input matInput placeholder="Enter Supplier Name" [(ngModel)]="supplierdata.name" id="name"  name="name">
+                            <input matInput placeholder="Enter Supplier Name" [(ngModel)]="cdata.name" id="name"  name="name">
                           </mat-form-field>
                         </div>
                         <div fxFlex.gt-sm="100" fxFlex="100">
                             <mat-form-field>
-                                <input matInput placeholder="Enter IP Address" [(ngModel)]="supplierdata.ipaddress"  id="ipaddress" name="ipaddress">
+                                <input matInput placeholder="Enter IP Address" [(ngModel)]="cdata.ipaddr"  id="ipaddr" name="ipaddr">
                             </mat-form-field>
                         </div>
                         <div fxFlex.gt-sm="100" fxFlex="100">
                           <mat-form-field>
-                            <input matInput placeholder="Enter Prefix" [(ngModel)]="supplierdata.prefix"  id="prefix" name="prefix">
+                            <input matInput placeholder="Enter Prefix" [(ngModel)]="cdata.prefix"  id="prefix" name="prefix">
                           </mat-form-field>
                         </div>
                         <div fxFlex.gt-sm="100" fxFlex="100">
